Changelog
=========


0.3.0 (2011-08-02)
------------------

- Customized some viewlet templates to insert itemscope, itemtype and itemprop attributes [fdelia]
- Customized main template to insert itemscope, itemtype and itemprop attributes [fdelia]

0.2.0 (2011-08-01)
------------------

- Added some fields to Plone SEO control panel tool [fdelia]
- Added some fields to SEO tab [fdelia]
- Added viewlets for script rendering in the <head> and in the portal footer [fdelia]
- Added validation for the canonical url [fdelia]
- Added ReallyUserFriendlyTypes vocabulary [fdelia]
- Personalized view for sitemap.xml.gz generation, calculate content types that should be included [fdelia]
- Added getIncludedInSitemapxml metadata and a custom index method to access this metadata [fdelia]
- Updated sitemap.xml.gz generation view, calculate whether each object should be included, according to the getIncludedInSitemapxml metadata [fdelia]
- Added validation for the priority sitemap.xml.gz [fdelia]
- Added getPrioritySitemapxml metadata and a custom index method to access this metadata [fdelia]
- Updated sitemap.xml.gz generation view, calculate priority for each object, according to the getPrioritySitemapxml metadata [fdelia]
- Personalized main_template for added itemscope and itemtype attributes to tag body [fdelia]
- Migrated properties to annotations [fdelia]
- Added upgradeStep for migrate the existing properties to annotations [fdelia]
- Added handling of the page not found [fdelia]

0.1.0 (2011-07-20)
------------------

- Added Plone SEO control panel tool [fdelia]
- Added viewlet for insert meta tags in html head of pages [fdelia]
- Added view that allows to calculate html header meta tags on context [fdelia]
- Added some views that allows to calculate meta tags base on the type of context [fdelia]
- Added some methods that allows to calculate meta tags base on the page in PloneSiteRoot context [fdelia]
- Added viewlet for custom title tag rendering [fdelia]